Fix/page (#19)
* scrollbar on overflow-x for filmshows

* fix overflow for checkout area

* fix overflow for checkout area

--- a/src/components/Program/FilmShows.css
+++ b/src/components/Program/FilmShows.css
@@ -2,7 +2,8 @@
 .filmShowsDiv {
     align-items: top;
     display: flex;
-    justify-content: center;
+    overflow-x: auto;
+    width: inherit;
 }
 
 .filmShowDiv {
