--- a/src/components/Program/ProgramPageMovie.css
+++ b/src/components/Program/ProgramPageMovie.css
@@ -50,5 +50,5 @@
 
 .movieInformationDiv {
     flex: 1 1 auto;
-    width: 60%;
+    width: 60vw;
 }
